--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
             --light: #F7F9FC;
             --text: #333333;
             --white: #FFFFFF;
-            --shadow: 0 4px 12px rgba(0,0,0,0.1);
+            /* --shadow: 0 4px 12px rgba(0,0,0,0.1);
+            --primary: #FF6B8B;
+            --secondary: #4ECDC4;
+            --accent: #FFD166;
+            --dark: #2A2D34;
+            --light: #F7F9FC;
+            --text: #333333;
+            --white: #FFFFFF;
+            --shadow: 0 4px 12px rgba(0,0,0,0.1); */
         }
 
         /* ===== ESTILOS GERAIS ===== */
