--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                     <p>Esse é o nosso lema principal, que nos trouxe até aqui com mais de <strong>3.500 eventos</strong> realizados com sucesso.</p>
                     
                     <div class="stats">
-                        <div class="stat">
+                        <div class="stat" id="bordaAmarelo">
                             <h3>8+</h3>
                             <p>Anos de Experiência</p>
                         </div>
-                        <div class="stat">
+                        <div class="stat" id="bordaVerde">
                             <h3>3.500+</h3>
                             <p>Eventos Realizados</p>
                         </div>
-                        <div class="stat">
+                        <div class="stat" id="bordaRosa">
                             <h3>10+</h3>
                             <p>Eventos Diários</p>
                         </div>
@@ -75,7 +75,7 @@
             </div>
         </div>
     </section>
-
+    <div class="linha-verde"></div>
     <!-- Barraquinhas Section -->
     <section id="barraquinhas" class="barraquinhas">
         <div class="container">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="barraquinha-card">
                     <div class="barraquinha-icon">
-                        <i class="fas fa-pancakes"></i>
+                        <i class="fa-solid fa-wheat-awn"></i>
                     </div>
                     <h3>Crepes</h3>
                     <p>Recheios doces e salgados.</p>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="barraquinha-card">
                     <div class="barraquinha-icon">
-                        <i class="fas fa-popcorn"></i>
+                        <i class="fa-solid fa-bowl-rice"></i>
                     </div>
                     <h3>Pipoca</h3>
                     <p>Crocante e leve, ideal para animar.</p>
@@ -156,7 +156,7 @@
             </div>
         </div>
     </section>
-
+    <div class="linha-verde"></div>
     <!-- Cardápio Section -->
     <section id="cardapio" class="cardapio">
         <div class="container">
@@ -365,7 +365,7 @@
             </div>
         </div>
     </section>
-
+    <div class="linha-verde"></div>
     <!-- Combos Section -->
     <section id="combos" class="combos">
         <div class="container">
@@ -433,7 +433,7 @@
             </div>
         </div>
     </section>
-
+    <div class="linha-verde"></div>
     <!-- Contato Section -->
     <section id="contato" class="contato">
         <div class="container">
