--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <img src="img/background-fundo-home-3.jpg" alt="">
         <div class="container">
             <h1 style="color:white">DIVER KIDS</h1>
             <p class="texto-branco">Há mais de 8 anos realizando sonhos e transformando festas infantis em momentos mágicos e inesquecíveis!</p>
