--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             <h3 style="color: var(--blue);">8+</h3>
                             <p>Anos de Experiência</p>
                         </div>
-                        <div class="stat" id="bordaVerde">
-                            <h3>3.500+</h3>
+                        <div class="stat" id="bordaAmarelo">
+                            <h3 style="color: var(--accent)">3.500+</h3>
                             <p>Eventos Realizados</p>
                         </div>
                         <div class="stat" id="bordaRosa">
