--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <h2>Combos Especiais</h2>
             <p style="text-align: center; margin-bottom: 2rem;">Escolha um dos nossos combos e aproveite preços especiais!</p>
             
-            <div data-aos="zoom-out-right" class="combo-cards">
+            <div class="combo-cards">
                 <div class="combo-card">
                     <h3>COMBO CACHORRO + FRITAS OU CREPES</h3>
                     <div class="combo-brinde" style="color:white">Brinde: Algodão Doce ou Pipoca</div>
