--- a/index.html
+++ b/index.html
@@ -160,6 +160,47 @@
                     <li style="padding: 0.5rem 0;"><i class="fas fa-check" style="color: var(--secondary); margin-right: 0.5rem;"></i> Oferecemos qualidade e diversão garantida durante o evento!</li>
                 </ul>
             </div>
+
+            <div class="container" style="margin-top: 80px;">
+            <h2>Galeria de Fotos</h2>
+            <div class="galeria-grid">
+                <div data-aos="fade-right" class="galeria-card">
+                    <img src="img galeria/1.jpg" alt="">
+                </div>
+                <div data-aos="fade-left" class="galeria-card">
+                    <img src="img galeria/2.jpg" alt="">
+                </div>
+                <div data-aos="fade-right" class="galeria-card">
+                    <img src="img galeria/3.jpg" alt="">
+                </div>
+                <div data-aos="fade-left" class="galeria-card">
+                    <img src="img galeria/4.jpg" alt="">
+                </div>
+                <div data-aos="fade-right" class="galeria-card">
+                    <img src="img galeria/5.jpg" alt="">
+                </div>
+                <div data-aos="fade-left" class="galeria-card">
+                    <img src="img galeria/6.jpg" alt="">
+                </div>
+                <div data-aos="fade-right" class="galeria-card">
+                    <img src="img galeria/7.jpg" alt="">
+                </div>
+                <div data-aos="fade-left" class="galeria-card">
+                    <img src="img galeria/8.jpg" alt="">
+                </div>
+                <div data-aos="fade-right" class="galeria-card">
+                    <img src="img galeria/9.jpg" alt="">
+                </div>
+                <div data-aos="fade-left" class="galeria-card">
+                    <img src="img galeria/10.jpg" alt="">
+                </div>
+                <div data-aos="fade-right" class="galeria-card">
+                    <img src="img galeria/11.jpg" alt="">
+                </div>
+                <div data-aos="fade-left" class="galeria-card">
+                    <img src="img galeria/12.jpg" alt="">
+                </div>
+            </div>
         </div>
     </section>
     
