--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <ul class="nav-links">
                 <li><a href="#sobre">Sobre Nós</a></li>
                 <li><a href="#barraquinhas">Barraquinhas</a></li>
+                <li><a href="#galeria">Galeria de Fotos</a></li>
                 <li><a href="#cardapio">Cardápio</a></li>
                 <li><a href="#combos">Combos</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -161,7 +162,7 @@
                 </ul>
             </div>
 
-            <div class="container" style="margin-top: 80px;">
+            <div class="container" id="galeria" style="margin-top: 80px;">
             <h2>Galeria de Fotos</h2>
             <div class="galeria-grid">
                 <div data-aos="fade-right" class="galeria-card">
