--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 data-aos="fade-down-right" style="color:white">DIVER KIDS</h1>
             <p data-aos="fade-down-right" class="texto-branco">Há mais de 8 anos realizando sonhos e transformando festas infantis em momentos mágicos e inesquecíveis!</p>
             <a data-aos="fade-up"
-     data-aos-anchor-placement="center-bottom" href="#contato" class="btn">Solicitar Orçamento</a>
+     data-aos-anchor-placement="center-bottom" href="https://wa.me/5553984586459?text=Olá! Gostaria de solicitar um orçamento para uma festa infantil." class="btn">Solicitar Orçamento</a>
         </div>
     </section>
 
@@ -504,7 +504,7 @@
                 <div data-aos="fade-right" class="info-card">
                     <i class="fas fa-phone-alt"></i>
                     <h3>Telefone</h3>
-                    <p>(53) 99999-9999</p>
+                    <p>(53) 98458-6459</p>
                 </div>
                 <div data-aos="fade-right" class="info-card">
                     <i class="fas fa-envelope"></i>
@@ -518,7 +518,7 @@
                 </div>
             </div>
             
-            <a data-aos="fade-up" data-aos-anchor-placement="center-bottom" href="https://wa.me/5553999999999?text=Olá! Gostaria de solicitar um orçamento para uma festa infantil." class="btn" target="_blank">
+            <a data-aos="fade-up" data-aos-anchor-placement="center-bottom" href="https://wa.me/5553984586459?text=Olá! Gostaria de solicitar um orçamento para uma festa infantil." class="btn" target="_blank">
                 <i class="fab fa-whatsapp"></i> Fale Conosco pelo WhatsApp
             </a>
         </div>
@@ -558,7 +558,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/5553999999999?text=Olá! Gostaria de solicitar um orçamento para uma festa infantil." class="btn-whatsapp" target="_blank">
+    <a href="https://wa.me/5553984586459?text=Olá! Gostaria de solicitar um orçamento para uma festa infantil." class="btn-whatsapp" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
