--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIVER KIDS - Buffet de Barraquinhas para Festas Infantis</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- link css -->
     <link rel="stylesheet" href="style.css">
-    <!-- link css and -->
+    <!---->
+
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&display=swap" rel="stylesheet">
     <!-- fonte and -->
+
     <!-- AOS ANIMACOES -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!---->
+
+    <!-- fiveicon -->
+    <link rel="shortcut icon" href="img/logo original.png" type="image/x-icon">
+
+    <!-- SEO para aparecer no Google -->
+    <title>Buffet Infantil em Pelotas | Diver Kids</title>
+    <meta name="description" content="A Diver Kids oferece buffet de barraquinhas e festas infantis em Pelotas. Veja cardápios, fotos e peça seu orçamento online de forma rápida e prática.">
+    <meta name="keywords" content="buffet infantil Pelotas, festa infantil Pelotas, Diver Kids, barraquinhas de festa, buffet de festa, cardápio infantil, Pelotas">
+    <meta name="author" content="Alexandre Domingues">
 </head>
 <body>
     <!-- Header -->
