--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
         <div class="navbar container">
             <div class="logo">
-                <img src="img/logo_original-sem-fundo-tamanho-minimo.png" alt="" width="150px">
+                <img src="img/logo_original-sem-fundo-tamanho-minimo.png" alt="">
             </div>
             <ul class="nav-links">
                 <li><a href="#sobre">Sobre Nós</a></li>
